--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BioNova – Sustainable Development NGO</title>
+  <title>YCI</title>
   
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -143,26 +143,19 @@
 
   <!-- Floating Logo -->
   <div class="floating-logo">
-    <img src="content/images/IMG_5811.png" alt="BioNova Logo" onerror="this.style.display='none'">
+    <img src="content/images/IMG_5811.png" alt="YCI Logo" onerror="this.style.display='none'">
   </div>
 
   <!-- Navigation -->
   <nav id="mainNav" class="fixed w-full top-0 z-50 glass transition-all duration-300">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex justify-between items-center h-16 md:h-20">
-        <a href="index.html" class="text-2xl md:text-3xl font-bold gradient-text">BioNova</a>
-        <div class="flex items-center space-x-4">
-          <button id="mobileMenuBtn" class="md:hidden p-2 rounded-lg hover:bg-white/50">
-            <svg class="w-6 h-6 text-gray-800" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-            </svg>
-          </button>
-        </div>
+        <a href="index.html" class="text-2xl md:text-5xl font-bold gradient-text italic">YCI</a>
         <div class="hidden md:flex items-center space-x-8">
-          <a href="index.html" class="text-gray-800 hover:text-primary font-medium">Home</a>
-          <a href="services.html" class="text-gray-800 hover:text-primary font-medium">About</a>
-          <a href="articles.html" class="text-gray-800 hover:text-primary font-medium">Publications</a>
-          <a href="team.html" class="text-gray-800 hover:text-primary font-medium">Team</a>
+          <a href="index.html" class="px-6 py-2.5 bg-gradient-to-r from-primary to-secondary text-white rounded-full font-medium hover:shadow-lg hover:scale-105">Home</a>
+          <a href="services.html" class="px-6 py-2.5 bg-gradient-to-r from-primary to-secondary text-white rounded-full font-medium hover:shadow-lg hover:scale-105">About</a>
+          <a href="articles.html" class="px-6 py-2.5 bg-gradient-to-r from-primary to-secondary text-white rounded-full font-medium hover:shadow-lg hover:scale-105">Publications</a>
+          <a href="team.html" class="px-6 py-2.5 bg-gradient-to-r from-primary to-secondary text-white rounded-full font-medium hover:shadow-lg hover:scale-105">Team</a>
           <a href="contact.html" class="px-6 py-2.5 bg-gradient-to-r from-primary to-secondary text-white rounded-full font-medium hover:shadow-lg hover:scale-105">Contact</a>
         </div>
       </div>
@@ -193,32 +186,47 @@
           Empowering communities through innovative development programs and strategic partnerships
         </p>
         <div class="flex flex-col sm:flex-row gap-4 justify-center opacity-0 animate-fadeInUp delay-400">
-          <a href="contact.html" class="px-8 py-4 bg-white/20 backdrop-blur-sm border border-white text-white rounded-full font-semibold hover:bg-white/30 hover:scale-105">Join Our Mission</a>
-          <a href="services.html" class="px-8 py-4 bg-white/10 backdrop-blur-sm border border-white text-white rounded-full font-semibold hover:bg-white/20 hover:scale-105">Learn More</a>
+          <a href="contact.html" class="inline-flex items-center px-8 py-4 bg-white text-primary rounded-full font-bold text-lg hover:bg-opacity-90 hover:scale-105 shadow-xl">Join Our Mission</a>
+          <a href="services.html" class="inline-flex items-center px-8 py-4 bg-white text-primary rounded-full font-bold text-lg hover:bg-opacity-90 hover:scale-105 shadow-xl">Learn More</a>
         </div>
       </div>
     </section>
 
-    <!-- We Are -->
-    <section class="py-16 md:py-20">
-      <div class="max-w-7xl mx-auto px-4">
-        <h2 class="text-5xl md:text-6xl lg:text-7xl font-bold text-center gradient-text">WE ARE</h2>
-      </div>
+    <!-- Stats Section -->
+    <section class="py-12">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="relative overflow-hidden rounded-3xl bg-gradient-to-br from-primary via-secondary to-success p-12 md:p-16 text-center text-white shadow-2xl">
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
+                    <div class="stat-item">
+                        <div class="text-4xl md:text-5xl font-bold text-white mb-2">0</div>
+                        <div class="text-lg md:text-xl text-white">Team Members</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="text-4xl md:text-5xl font-bold text-white mb-2">15+</div>
+                        <div class="text-lg md:text-xl text-white">Years Experience</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="text-3xl md:text-4xl font-bold text-white mb-2">20+ Countries</div>
+                        <div class="text-lg md:text-xl text-white">Global Reach</div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- About -->
     <section class="py-16 md:py-24">
       <div class="max-w-7xl mx-auto px-4">
-        <div class="glass-card shadow-xl">
+        <div class="relative overflow-hidden rounded-3xl bg-gradient-to-br from-primary via-secondary to-success p-12 md:p-16 text-center text-white shadow-2xl">
           <div class="grid md:grid-cols-2 gap-0">
             <div class="p-8 md:p-12 lg:p-16 flex flex-col justify-center order-2 md:order-1">
-              <h2 class="text-3xl md:text-4xl lg:text-5xl font-bold mb-4 text-gray-900">
+              <h2 class="text-3xl md:text-4xl lg:text-5xl font-bold mb-4 text-white">
                 Our Commitment to<br>Sustainable Change
               </h2>
-              <p class="text-lg text-gray-700 mb-6">
+              <p class="text-lg text-white">
                 Building resilient communities through evidence-based approaches.
               </p>
-              <div class="space-y-4 text-gray-700 mb-8">
+              <div class="space-y-4 text-white mb-8">
                 <p>BioNova is an international NGO dedicated to lasting, sustainable change.</p>
                 <p>We focus on education, healthcare, and economic development with local leadership.</p>
               </div>
@@ -271,11 +279,89 @@
   </main>
 
   <!-- Footer -->
-  <footer class="bg-gray-900 text-gray-300 py-12">
-    <div class="max-w-7xl mx-auto px-4 text-center">
-      <p>&copy; 2025 BioNova. All rights reserved.</p>
-    </div>
-  </footer>
+ <!-- Footer -->
+    <footer class="bg-gray-900 text-gray-300">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12 md:py-16">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 md:gap-12">
+                <!-- Brand -->
+                <div>
+                    <h3 class="text-2xl font-bold text-white mb-4">BioNova</h3>
+                    <p class="text-sm mb-6 leading-relaxed">
+                        Building sustainable futures through innovation, equity, and community-led action.
+                    </p>
+                    <div class="flex space-x-3">
+                        <a href="#" class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-accent transition-all duration-300 hover:scale-110">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a href="#" class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-accent transition-all duration-300 hover:scale-110">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a href="#" class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-accent transition-all duration-300 hover:scale-110">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                        <a href="#" class="w-10 h-10 rounded-full bg-white/10 flex items-center justify-center hover:bg-accent transition-all duration-300 hover:scale-110">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Quick Links -->
+                <div>
+                    <h4 class="text-white font-semibold text-lg mb-4">Quick Links</h4>
+                    <ul class="space-y-2.5 text-sm">
+                        <li><a href="services.html" class="hover:text-white transition-colors flex items-center"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>About Us</a></li>
+                        <li><a href="articles.html" class="hover:text-white transition-colors flex items-center"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Publications</a></li>
+                        <li><a href="team.html" class="hover:text-white transition-colors flex items-center"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Our Team</a></li>
+                        <li><a href="contact.html" class="hover:text-white transition-colors flex items-center"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Contact</a></li>
+                        <li><a href="#" class="hover:text-white transition-colors flex items-center"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Careers</a></li>
+                    </ul>
+                </div>
+
+                <!-- Contact -->
+                <div>
+                    <h4 class="text-white font-semibold text-lg mb-4">Contact</h4>
+                    <ul class="space-y-3 text-sm">
+                        <li class="flex items-start">
+                            <i class="fas fa-map-marker-alt mt-1 mr-3 text-accent"></i>
+                            <span>Dhaka, Bangladesh</span>
+                        </li>
+                        <li class="flex items-start">
+                            <i class="fas fa-envelope mt-1 mr-3 text-accent"></i>
+                            <span>info@bionova.org</span>
+                        </li>
+                        <li class="flex items-start">
+                            <i class="fas fa-phone mt-1 mr-3 text-accent"></i>
+                            <span>+880 17XX-XXXXXX</span>
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- Resources -->
+                <div>
+                    <h4 class="text-white font-semibold text-lg mb-4">Resources</h4>
+                    <ul class="space-y-2.5 text-sm">
+                        <li><a href="#" class="hover:text-white transition-colors flex items-center"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Annual Reports</a></li>
+                        <li><a href="#" class="hover:text-white transition-colors flex items-center"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Research Papers</a></li>
+                        <li><a href="#" class="hover:text-white transition-colors flex items-center"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Case Studies</a></li>
+                        <li><a href="#" class="hover:text-white transition-colors flex items-center"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Partnerships</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Copyright -->
+            <div class="border-t border-white/10 mt-12 pt-8 text-center text-sm">
+                <p>&copy; 2025 BioNova. All rights reserved.</p>
+                <div class="mt-3 space-x-4">
+                    <a href="#" class="hover:text-white transition-colors">Privacy</a>
+                    <span class="text-gray-600">•</span>
+                    <a href="#" class="hover:text-white transition-colors">Terms</a>
+                    <span class="text-gray-600">•</span>
+                    <a href="contact.html" class="hover:text-white transition-colors">Contact</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 
   <!-- Floating Buttons -->
   <a href="contact.html" class="fixed bottom-6 right-6 px-6 py-4 rounded-full bg-gradient-to-r from-primary to-secondary text-white font-semibold shadow-xl hover:scale-105 z-40">Join Us</a>
@@ -357,8 +443,8 @@
                          onerror="this.onerror=null;this.src='https://via.placeholder.com/800x500/f1f5f9/94a3b8?text=Image+Unavailable'">
                   </div>
                   <div class="p-6 flex flex-col flex-grow">
-                    <h3 class="text-xl md:text-2xl font-bold mb-2 text-gray-900 line-clamp-2">${meta.title || 'Untitled'}</h3>
-                    ${meta.date ? `<p class="text-sm text-gray-500 mb-3"><i class="far fa-calendar-alt mr-2 text-accent"></i>${meta.date}</p>` : ''}
+                    <h3 class="text-xl md:text-2xl font-bold mb-2 text-white line-clamp-2">${meta.title || 'Untitled'}</h3>
+                    ${meta.date ? `<p class="text-sm text-white mb-3"><i class="far fa-calendar-alt mr-2 text-accent"></i>${meta.date}</p>` : ''}
                     <p class="text-gray-600 mb-6 flex-grow leading-relaxed">${excerpt}</p>
                     <a href="article.html" 
                        onclick="openDetail('${file}','article');return false;"
