--- a/test.html
+++ b/test.html
@@ -427,6 +427,7 @@
         if (!res.ok) throw new Error('index.json');
         const data = await res.json();
 
+        // Articles - loading 6
         const articleHTML = await Promise.all((data.articles?.slice(0, 6) || []).map(async file => {
           try {
             const txt = await fetch(`/content/${file}`).then(r => r.ok ? r.text() : Promise.reject());
@@ -437,18 +438,18 @@
             return `
               <div class="article-card opacity-0">
                 <div class="glass-card rounded-2xl overflow-hidden shadow-lg h-full flex flex-col">
-                  <div class="h-48 md:h-56 overflow-hidden">
+                  <div class="card-image-wrapper h-48 md:h-56 overflow-hidden">
                     <img src="${meta.image || 'https://via.placeholder.com/800x500/e2e8f0/64748b?text=Article'}"
                          class="w-full h-full object-cover" alt="${meta.title}" loading="lazy"
                          onerror="this.onerror=null;this.src='https://via.placeholder.com/800x500/f1f5f9/94a3b8?text=Image+Unavailable'">
                   </div>
                   <div class="p-6 flex flex-col flex-grow">
                     <h3 class="text-xl md:text-2xl font-bold mb-2 text-white line-clamp-2">${meta.title || 'Untitled'}</h3>
-                    ${meta.date ? `<p class="text-sm text-white mb-3"><i class="far fa-calendar-alt mr-2 text-accent"></i>${meta.date}</p>` : ''}
-                    <p class="text-gray-600 mb-6 flex-grow leading-relaxed">${excerpt}</p>
+                    ${meta.date ? `<p class="text-sm text-white mb-3 flex items-center"><i class="far fa-calendar-alt mr-2 text-accent"></i>${meta.date}</p>` : ''}
+                    <p class="text-white mb-6 flex-grow leading-relaxed">${excerpt}</p>
                     <a href="article.html" 
                        onclick="openDetail('${file}','article');return false;"
-                       class="inline-flex items-center px-6 py-3 bg-gradient-to-r from-primary to-secondary text-white rounded-full font-medium hover:shadow-lg hover:scale-105 self-start">
+                       class="inline-flex items-center px-6 py-3 bg-gradient-to-r from-primary to-secondary text-white rounded-full font-medium hover:shadow-lg hover:scale-105 transition-all duration-300 self-start">
                       Read More
                       <i class="fas fa-arrow-right ml-2 text-sm"></i>
                     </a>
@@ -467,9 +468,9 @@
         } else {
           articlesContainer.innerHTML = `
             <div class="col-span-full">
-              <div class="glass-card rounded-2xl p-12 text-center">
-                <i class="fas fa-newspaper text-5xl text-gray-400 mb-4"></i>
-                <p class="text-xl text-gray-600">No recent publications available.</p>
+              <div class="solid-card rounded-2xl p-12 text-center">
+                <i class="fas fa-newspaper text-5xl text-white mb-4"></i>
+                <p class="text-xl text-white">No recent publications available.</p>
               </div>
             </div>`;
         }
@@ -480,9 +481,9 @@
         if (articlesContainer) {
           articlesContainer.innerHTML = `
             <div class="col-span-full">
-              <div class="glass-card border border-red-200 rounded-2xl p-12 text-center">
-                <i class="fas fa-exclamation-triangle text-5xl text-red-500 mb-4"></i>
-                <p class="text-xl text-red-600">Failed to load articles.</p>
+              <div class="bg-red-50 dark:bg-red-900/20 border border-red-200 dark:border-red-800 rounded-2xl p-12 text-center">
+                <i class="fas fa-exclamation-triangle text-5xl text-red-400 mb-4"></i>
+                <p class="text-xl text-red-600 dark:text-red-400">Failed to load articles.</p>
               </div>
             </div>`;
         }
